--- a/Sockets/WebServer/build.gradle
+++ b/Sockets/WebServer/build.gradle
@@ -4,6 +4,14 @@ apply plugin: 'application'
 //define main class
 mainClassName = 'SimpleServer'
 
+dependencies {
+  implementation 'org.json:json:20210307'
+}
+repositories {
+  mavenCentral()
+}
+
+
 task SimpleWebServer(type: JavaExec) {
   group 'http'
   description 'Simple Http Demo'
@@ -22,6 +30,10 @@ task FunWebServer(type: JavaExec) {
 
   main = 'funHttpServer.WebServer'
   standardInput = System.in
+
+
+
+
 }
 
 
