--- a/Gradle/JavaGradle/build.gradle
+++ b/Gradle/JavaGradle/build.gradle
@@ -44,12 +44,41 @@ task runAppAgain(type: JavaExec) {
 // task that runs the Fraction Main which does not use arguments: gradle runFraction
 task runFraction(type: JavaExec) {
   group 'Fraction Tasks'
-  description 'Tasks which runs Fraction with no arguments'
+  description 'Tasks which runs Fraction with two arguments'
 
   classpath = sourceSets.main.runtimeClasspath
 
   main = 'Fraction'
+
+  // default arguments if non are given
+  if (project.hasProperty("num1") && project.hasProperty("num2")) {
+    args(project.getProperty('num1'), project.getProperty('num2'));
+  } else if (project.hasProperty("num1")){
+    args(project.getProperty('num1'), 1);
+  }
 }
+
+task runFrac(type: JavaExec) {
+    group 'Fraction Tasks'
+    description 'Task which runs Fraction with two arguments or defaults'
+
+    classpath = sourceSets.main.runtimeClasspath
+
+    main = 'Fraction'
+
+    // Set arguments for the runFrac task
+    if (project.hasProperty("denom") && project.hasProperty("num")) {
+        args(project.getProperty('denom'), project.getProperty('num'))
+    } else if (project.hasProperty("denom")) {
+        args(project.getProperty('denom'), "1")
+    } else if (project.hasProperty("num")) {
+        args("1", project.getProperty('num'))
+    } else {
+        // Provide default values or handle the case with no arguments
+        args('1', '1')
+    }
+}
+
 
 // Try:
 // 1. Change Fraction.main so it accepts 2 arguments
